# csv-splitter

./: .pre-commit-config.yaml  README.md  pyproject.toml  split_csv.py  test_split_csv.py
