[project]
name = "csv-splitter"
version = "0.1.0"
description = "Splits CSV's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
